fix: pearl overflow & dbl tap zoom

--- a/src/components/Pearl.module.css
+++ b/src/components/Pearl.module.css
@@ -2,6 +2,7 @@
   background-color: var(--color-pearl);
   border-radius: 50%;
   box-shadow: inset -3px -3px 7px 4px var(--color-pearl-dark);
+  filter: drop-shadow(0 0 1px var(--color-pearl-dark));
   width: var(--pearl-size);
   aspect-ratio: 1;
 }
